fixed spacing on mobile devices

--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -68,10 +68,6 @@
   color: #3749ea;
 }
 
-.img {
-  width: 100%;
-}
-
 /* smaller desktops */
 
 @media screen and (max-width: 84em) {
@@ -95,5 +91,9 @@
   .container {
     display: flex;
     flex-direction: column-reverse;
+  }
+
+  .img {
+    max-width: 75%;
   }
 }
